feat: implement change and terminate order
